chore: enhanced swagger & debugging.
